fix(ons-list): Avoid double border under toolbar.

--- a/core/css/common.css
+++ b/core/css/common.css
@@ -156,6 +156,10 @@ ons-tabbar[position="top"] .page[status-bar-fill] > .page__content {
   bottom: 44px;
 }
 
+.page__content > .list:not(.list--material):first-child {
+  margin-top: -1px; /* Avoid double border with toolbar */
+}
+
 ons-action-sheet[disabled],
 ons-dialog[disabled],
 ons-alert-dialog[disabled],
